src/components/header/Header.module.css
header {
    margin: 0;
    padding: .6rem 0;
    background-color: var(--background);
    width: 100%;
}

nav {
    display: flex;
    transition: all .5s ease;
}

nav ul {
    display: flex;
    justify-content: end;
}

nav li {
    color: var(--foreground);
    transition: all .2s ease;
    padding: .4rem 1.3rem;
    border-radius: 5px;
    font-size: 1.4rem;
    list-style: none;
    margin: 0 10px;
    cursor: pointer;
}

nav li:hover {
    background-color: rgb(218, 218, 218);
    color: var(--color-dark);
}

.resume {
    color: var(--foreground);
    background-color: var(--background);
    transition: all .2s ease;
    padding: .4rem 1.3rem;
    border-radius: 5px;
    font-size: 1.4rem;
    list-style: none;
    margin: 0 10px;
    cursor: pointer;
    border: none;
    outline: none;
}

.resume:hover {
    background-color: rgb(218, 218, 218);
    color: var(--color-dark);
}

button:hover {
    background-color: rgb(218, 218, 218);
    color: var(--color-dark);
}

.icon {
    color: var(--foreground);
    cursor: pointer;
    margin: 0 2rem;
    background-color: none;
    margin-top: 8rem;
}


.toggle-btn {
    margin-left: 1rem;
    width: 45px;
    height: 23px;
    background-color: var(--foreground);
    display: flex;
    border-radius: 50px;
    align-items: center;
    justify-content: space-between;
    padding: 5px;
    position: relative;
    transform: scale(1.3);
    cursor: pointer;
}

.ball {
    width: 20px;
    height: 20px;
    background-color: var(--background);
    position: absolute;
    top: 1px;
    left: 2px;
    border-radius: 50%;
    transition: all .2s linear;
}

.move {
    transform: translateX(22px);
}

.menu {
    display: none;
    border: 2px double var(grey);
    padding: .3rem;
    border-radius: 7px;
    color: var(--foreground);
}

.wrapper {
    position: absolute;
    top: 0;
    left: 0;
    height: 100vh;
    background-color: rgba(0, 0, 0, .7);
    z-index: 2;
}


@media screen and (max-width: 720px) {
    .menu {
        display: block;
        margin-left: 2rem;
    }

    .close{
        z-index: 4;
        display: block;
        margin-left: 2rem;
        color: var(--foreground);
        border: 2px solid var(--foreground);
        /* font-size: 6rem; */
        border-radius: 7px;
    }

    nav {
        display: none;
    }

    .mobileMenuOpen .resume {
        justify-content: center;
        color: var(--foreground);
        background-color: var(--background);
        transition: all .2s ease;
        border-radius: 5px;
        cursor: pointer;
        border: none;
        outline: none;
        font-size: 2rem;
        width: 100%;
        display: flex;
        margin: 1rem;
        padding: 1rem 0;
    }
    .resume:hover {
        background-color: rgb(218, 218, 218);
        color: var(--color-dark);
    }

    .mobileMenuOpen nav {
        z-index: 3;
        position: absolute;
        top: 0;
        right: 0;
        display: block;
        width: 80%;
        height: 100%;
        background-color: var(--background);
        flex-direction: column;
        border-radius: 25px 0 0 25px;
        border-left: 3px solid var(--foreground);
        box-shadow: var(--shadow-box);
    }

    .mobileMenuOpen nav ul {
        height: 100%;
        /* width: 80%; */
        display: flex;
        margin: auto 2rem;
        flex-direction: column;
        justify-content: center;
        text-align: center;
    }

    .mobileMenuOpen nav li {
        font-size: 2rem;
        width: 100%;
        display: block;
        /* margin: 1rem; */
        padding: 1rem 0;
        border: none;
    }



    .mobileMenuOpen .close-btn {
        /* display: block; */
        z-index: 3;
        cursor: pointer;

    }

    .navbar li:nth-child(4) {
        background-color: transparent;
        cursor: none;
    }

    .mobileMenuOpen .toggle-btn {
        /* display: flex; */
        position: absolute;
        top: 1.5rem;
        right: 7rem;
    }

    nav li:nth-child(5) {
        position: absolute;
        top: 0;
        left: 0;
        height: 0;
        width: 0;
    }

    nav li:hover:nth-child(6):hover {
        background-color: none;
        color: none;
    }

}

